--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,45 @@
-body{
-    padding: 0;
-    margin: 0px;
+body {
+    margin: 0%;
+    padding: 0%;
     box-sizing: border-box;
     background-color: powderblue;
 }
-
-.t1 p, .t2 p{
-    width: 40%;
+.abaixo{
+    text-align: center;
+    font-size: large;
+    padding-top: 0;
+    margin: 0;
+}
+.sobre {
+    border-style: solid;
+    align-content: center;
+    display: grid;
+    grid-template-columns:50% auto;
+    grid-template-rows: auto auto auto auto;
+    gap: 2px;
     
+    padding: 0px;
+    row-gap: 0px;
+    
+    font-size: large;
+
+}
+.sobre  p{
+    border-style: dotted;
+    text-align: center;
+    padding: 20px;
+}
+.p3 {
+    grid-column: 1 / span 2;
+}
+.p4{
+    grid-column: 2 / span 1;
+}
+
+.t1 p,
+.t2 p {
+    width: 40%;
+
     padding-left: 10px;
     font-size: large;
     float: left;
@@ -24,10 +56,12 @@ h2 {
     color: blueviolet;
     text-align: center;
 }
+
 h3 {
     color: darkblue;
 }
-caption{
+
+caption {
     padding-top: 10px;
     font-size: large;
     color: #111111;
@@ -35,7 +69,7 @@ caption{
 
 table {
     width: 50%;
-    
+
     border: 1px solid black;
     border-collapse: collapse;
     background-color: white;
@@ -44,10 +78,13 @@ table {
 
 }
 
-th ,td{
+th,
+td {
     border-style: inset;
 }
-.t1 th, div.t1 td {
+
+.t1 th,
+div.t1 td {
     border: 1px solid black;
     padding-left: 5px;
     text-align: center;
@@ -56,21 +93,25 @@ th ,td{
 .t1 tr:nth-child(even) {
     background-color: darkgrey;
 }
-.menu ul{
-    display: flex;
+
+header ul {
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
     background-color: #333333;
     list-style-type: none;
     padding: 0%;
     margin: 0%;
-    flex-wrap: nowrap; 
+    
 }
-.menu li a{
+
+header li a {
     display: block;
     text-decoration: none;
     color: white;
     text-align: center;
     padding: 16px;
 }
-.menu li a:hover{
+
+header li a:hover {
     background-color: #111111;
 }
